feat: Implement endpoints to use third party messages with attachments
Refs: SFEQS-1404 #78
