# packages/io-sign/src/infra/http/response.ts
@@ -21,6 +21,7 @@ const serializationProblem = pipe(
   JSON.stringify,
   response,
   withStatusCode(500),
+  // eslint-disable-next-line sonarjs/no-duplicate-string
   withHeader("Content-Type", "application/problem+json")
 );
 
@@ -34,8 +35,20 @@ const jsonResponse =
       E.getOrElse(() => serializationProblem)
     );
 
+const bufferResponse =
+  (statusCode: number) => (contentType: string) => (buffer: Buffer) =>
+    pipe(
+      // body of the response must be of type string, but buffer.toString appends some extra characters which corrupt the final file even with byte-encoding.
+      buffer as unknown as string,
+      response,
+      withStatusCode(statusCode),
+      withHeader("Content-Type", contentType),
+      withHeader("Content-Length", Buffer.byteLength(buffer).toString())
+    );
+
 export const success = jsonResponse(200);
 export const created = jsonResponse(201);
+export const successBuffer = bufferResponse(200);
 
 export const error = (e: Error) =>
   pipe(
